problem with navbar z-index fixed

--- a/source/assets/stylesheets/components/_navbar.scss
+++ b/source/assets/stylesheets/components/_navbar.scss
@@ -4,6 +4,7 @@
   background: #5A3E79;
   color: white;
   position: fixed;
+  z-index: 3;
 }
 
 .navbar-lewagon .navbar-collapse {
