--- a/source/assets/stylesheets/components/_project.scss
+++ b/source/assets/stylesheets/components/_project.scss
@@ -3,9 +3,7 @@
   border-radius: 15px;
   height: 500px;
 }
-.carousel-inner{
-  z-index: -1;
-}
+
 .card-icon{
   width: 50px;
   height: 50px;
@@ -24,6 +22,10 @@
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  z-index: 1;
+  &:hover{
+    background-color: white;
+  }
   img{
     width: 50%;
     object-fit: cover;
@@ -31,7 +33,6 @@
     padding-bottom: 15px;
   }
 }
-
 .card-left{
   display: flex;
   flex-direction: column;
